<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="7dp"
    tools:context=".MainActivity">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:background="#E8F4FA"
           android:orientation="vertical">

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="horizontal">

               <ImageView
                   android:layout_width="30dp"
                   android:layout_height="30dp"
                   android:layout_gravity="center_vertical"
                   android:layout_marginStart="2dp"
                   android:contentDescription="@string/description"
                   android:src="@drawable/menu" />

               <LinearLayout
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginStart="10dp"
                   android:orientation="vertical">

                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_gravity="center_horizontal"
                       android:text="@string/food"
                       android:textColor="@color/black"
                       android:textSize="24sp"
                       android:textStyle="bold" />

                   <TextView
                       android:id="@+id/deliver"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_gravity="center_horizontal"
                       android:layout_marginTop="10dp"
                       android:text="@string/delivery"
                       android:textColor="@color/black"
                       android:textSize="16sp" />
               </LinearLayout>

               <ImageView
                   android:layout_width="60dp"
                   android:layout_height="60dp"
                   android:layout_marginStart="30dp"
                   android:src="@drawable/chef"
                   android:contentDescription="@string/description" />
           </LinearLayout>

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="48dp"
               android:layout_marginLeft="10dp"
               android:layout_marginTop="25dp"
               android:layout_marginRight="10dp"
               android:layout_marginBottom="10dp"
               android:orientation="horizontal"
               android:weightSum="3">

               <androidx.appcompat.widget.AppCompatButton
                   android:id="@+id/giveaway"
                   android:layout_width="170dp"
                   android:layout_height="48dp"
                   android:layout_weight="1"
                   android:background="@drawable/custom_btn"
                   android:drawableStart="@drawable/give"
                   android:padding="10dp"
                   android:text="@string/give"
                   android:textAllCaps="false"
                   android:textSize="11sp"
                   android:textStyle="bold" />

               <androidx.appcompat.widget.AppCompatButton
                   android:layout_width="170dp"
                   android:layout_height="48dp"
                   android:layout_marginStart="10dp"
                   android:layout_weight="1"
                   android:background="@drawable/custom_btn"
                   android:drawableStart="@drawable/ic_baseline_home_24"
                   android:padding="10dp"
                   android:text="@string/home"
                   android:textAllCaps="false"
                   android:textSize="11sp"
                   android:textStyle="bold" />

               <androidx.appcompat.widget.AppCompatButton
                   android:id="@+id/nearme"
                   android:layout_width="160dp"
                   android:layout_height="48dp"
                   android:layout_marginStart="10dp"
                   android:layout_weight="1"
                   android:background="@drawable/custom_btn"
                   android:drawableStart="@drawable/navigation"
                   android:padding="10dp"
                   android:text="@string/near"
                   android:textAllCaps="false"
                   android:textSize="11sp"
                   android:textStyle="bold" />

           </LinearLayout>

           <FrameLayout
               android:layout_width="match_parent"
               android:layout_height="200dp">

           <ImageView
               android:layout_width="match_parent"
               android:layout_height="200dp"
               android:background="@drawable/custom_image"
               android:src="@drawable/coffeedemo"
               android:contentDescription="@string/description" />

               <ImageView
                   android:layout_width="30dp"
                   android:layout_height="30dp"
                   android:layout_margin="20dp"
                   android:src="@drawable/dot"
                   android:contentDescription="@string/description" />
               <ImageView
                   android:layout_width="30dp"
                   android:layout_height="30dp"
                   android:layout_gravity="end"
                   android:layout_margin="20dp"
                   android:src="@drawable/share"
                   android:contentDescription="@string/description" />
           </FrameLayout>

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="80dp"
               android:layout_marginTop="10dp"
               android:orientation="horizontal">

               <ImageView
                   android:layout_width="60dp"
                   android:layout_height="60dp"
                   android:layout_marginStart="10dp"
                   android:layout_marginBottom="10dp"
                   android:src="@drawable/chef"
                   android:contentDescription="@string/description" />

               <LinearLayout
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginStart="20dp"
                   android:orientation="vertical">

                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/coffee"
                       android:textAllCaps="false"
                       android:textColor="@color/black"
                       android:textSize="18sp"
                       android:textStyle="bold" />

                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_marginTop="4dp"
                       android:text="@string/name"
                       android:textAllCaps="false"
                       android:textColor="@color/black" />

                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="@string/order"
                       android:textAllCaps="false"
                       android:textColor="@color/black" />

               </LinearLayout>

               <LinearLayout
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:orientation="vertical">

                   <TextView
                       android:layout_width="80dp"
                       android:layout_height="25sp"
                       android:layout_marginStart="140dp"
                       android:text="@string/rs"
                       android:textColor="#2E2D2D"
                       android:textSize="18sp"
                       android:textStyle="bold" />

                   <TextView
                       android:layout_width="100dp"
                       android:layout_height="25sp"
                       android:layout_marginStart="115dp"
                       android:layout_marginTop="15dp"
                       android:text="@string/home"
                       android:textColor="@color/black" />

               </LinearLayout>
           </LinearLayout>
       <ImageView
           android:layout_width="match_parent"
           android:layout_height="3dp"
           android:background="#ACABAB"
           android:contentDescription="@string/home"/>
       </LinearLayout>





</ScrollView>